# list-it

./: .gitignore  Cargo.toml  data.json  readme.md
src/: builder.rs  lib.rs  list.rs  list_of_lists.rs  main.rs  program.rs
tests/: builder.rs  test_data.json
